implementing Emily's copy suggestions

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div class="section section--light section--first-in-section">
 			<div class="section__content">
 				<h2 class="h2-heading">My work</h2>
-					<p class="paragraph__home">A collection of case studies focusing on my design process, as well as side projects I do out of love of design and passion for continued learning.</p>
+					<p class="paragraph__home">A collection of case studies focusing on my design process, as well as side projects I do out of a love of design and a passion for continued learning.</p>
 				<a class ="link link--on-light-bg" href="vedrans_design_work.html">Explore my design work</a>
 			</div>
 		</div>
@@ -44,7 +44,7 @@
 		<div class="section section--light">
 			<div class="section__content">
 				<h2 class="h2-heading">Writing</h2>
-					<p class="paragraph__home">Writing about design is a big part of my self development. It helps me improve by questioning my own beliefs, sharing knowledge and creating dialog.</p>
+					<p class="paragraph__home">Writing about design is a big part of my self-development. It helps me improve by questioning my own beliefs, sharing knowledge and creating dialogue.</p>
 				<a class ="link link--on-light-bg" href="http://medium.com/@vedranio" target="b">Read my posts on Medium</a>
 			</div>
 		</div>
@@ -52,7 +52,7 @@
 		<div class="section section--light section--last-in-section">
 			<div class="section__content">
 				<h2 class="h2-heading">Design community</h2>
-					<p class="paragraph__home">I am actively involved in local design meetups, have <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.meetup.com/Sarajevo-UX-Design/">founded one myself</a> and love sharing ideas and learning about other designers’ process.</p>
+					<p class="paragraph__home">I am actively involved in local design meetups, have <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.meetup.com/Sarajevo-UX-Design/">founded one myself</a> and love sharing ideas and learning about other designers’ processes.</p>
 				<a class ="link link--on-light-bg" href="http://www.slideshare.net/vedranio/presentations" target="_blank">Browse my presentations</a>
 			</div>
 		</div>
