--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -73,7 +73,7 @@
 			<div id="WorkshopFacilitationAndWireframeDesign" class="my-work-item my-work-item_full-width-image--rubicon">
 				<div class="my-work-item__description--full-width-image">
 					<h2 class="h2-heading text--on-dark-bg">Workshop facilitation and wireframe design</h2>
-					<p class="text--on-dark-bg">I ran a two day design workshop for a development company in Sarajevo, and their Dutch clients, followed by wireframe designs for the entire product.</p>
+					<p class="text--on-dark-bg">I ran a two day design workshop for a development company in Sarajevo, and their Dutch clients, followed by creating wireframe designs for the entire product.</p>
 					<p class="text--on-dark-bg">As a result, both the clients and the development team were involved in the design process and had a clear idea on how to proceed with the implementation.</p>
 					<p><a class ="link link--on-dark-bg" href="design_workshop_facilitation_with_rubicon.html">Read case study</a></p>
 				</div>				
@@ -86,7 +86,7 @@
 					<h2 class="h2-heading">Credit card payment form</h2>
 
 					<div class="my-work-item__description">
-					<p>I redesigned the credit card payment form used during job ad posting. </p>
+					<p>I redesigned the credit card payment form used during job ad posting on SEEK’s website. </p>
 					<p>The redesign caused a 150% increase in customers paying upfront (rather than by invoice), resulting in a six figure increase in upfront cash flow.</p>
 					<p><a class ="link link--on-light-bg" href="seek_credit_card_form_redesign.html">Read case study</a></p>
 					</div>
@@ -118,7 +118,7 @@
 			<div id="CoachingAnOrgInUsabilityTesting" class="my-work-item my-work-item_full-width-image--kolektiv">
 				<div class="my-work-item__description--full-width-image">
 					<h2 class="h2-heading text--on-dark-bg">Coaching an organisation in usability testing</h2>
-					<p class="text--on-dark-bg">I worked with an organisations in Bosnia to introduce them to usability testing and coach them on how to incorporate usability testing into their product development process.</p>
+					<p class="text--on-dark-bg">I worked with an organisation in Bosnia to introduce them to usability testing and coach them on how to incorporate usability testing into their product development process.</p>
 					<p class="text--on-dark-bg">The <a class ="link link--on-dark-bg link--inline" href="http://kolektiv.ba/">Kolektiv</a> team saw the power of insights gained through usability testing for the first time and have since incorporated it into their product development process.</p>
 					<p><a class ="link link--on-dark-bg" href="usability_testing_with_kolektiv.html">Read case study</a></p>
 				</div>				
@@ -147,7 +147,7 @@
 					<h2 class="h2-heading">Side projects</h2>
 
 					<div class="my-work-item__description">
-					<p>Here are some side projects I worked on in my spare time. I do these things out of love for design and desire for constant learning. And because it beats watching TV.</p>
+					<p>Here are some side projects that I worked on in my spare time. I do these things out of a love for design and a desire for constant learning. And because it beats watching TV.</p>
 					<p>Looking back at some of these makes me cringe, but I can’t hide from the things I’ve done – they all make me the designer I am today.</p>
 					</div>					
 
