making the dot fit in the intro

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<div class="header__image"></div>	
 				<div class="intro">
 					<div class="intro__content">
-						<h1 class="h2-heading">Hello, I’m Vedran</h1>
+						<h1 class="h2-heading">Hello, I’m Vedran.</h1>
 						<p>I am a designer.</p>
 						<p>I design digital products and the way people interact with them.</p>
 						<a class ="link link__about-me" href="about_vedran.html">More about me</a>
