--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
 		<link rel="stylesheet" type="text/css" href="css/app.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto' rel='stylesheet' type='text/css'>
 		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
-
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Personal portfolio site for Vedran Arnautovic, UX Designer in Melbourne.">
+  		<meta name="author" content="Vedran Arnautović">
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-84060845-1', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
 	</head>	
 	<body>
 	<!-- NAV -->
