--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Vedran Arnautovic User Experience Designer in Melbourne</title>
+		<title>Vedran Arnautovic User Experience and Interaction Designer in Melbourne</title>
 		<link rel="stylesheet" src="http://normalize-css.googlecode.com/svn/trunk/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/app.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto' rel='stylesheet' type='text/css'>
 		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Personal portfolio site for Vedran Arnautovic, UX Designer in Melbourne.">
+		<meta name="description" content="Hello, I’m Vedran. I am a designer. I design digital products and the way people interact with them.">
+		<meta name="keywords" content="UX, UX Design, UXD, user experience design, interaction design, designer, prototyping, wireframing, workshop, user research, usability testing, portfolio, resume, cv, online portfolio, IxD, user centred design, vedran arnautovic, vedranio, thatbalduxguy, ux designer, interaction designer">
   		<meta name="author" content="Vedran Arnautović">
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
