minor clean up tasks
removing react experiments
removing old versions
removing unused js scripts

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="description" content="Hello, I’m Vedran. I am a designer. I design digital products and the way people interact with them.">
 		<meta name="keywords" content="UX, UX Design, UXD, user experience design, interaction design, designer, prototyping, wireframing, workshop, user research, usability testing, portfolio, resume, cv, online portfolio, IxD, user centred design, vedran arnautovic, vedranio, thatbalduxguy, ux designer, interaction designer">
   		<meta name="author" content="Vedran Arnautović">
-		<script>
+		<script async>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -20,7 +20,7 @@
 		  ga('send', 'pageview');
 
 		</script>
-	</head>	
+	</head>
 	<body>
 	<!-- NAV -->
 	<nav class="nav nav--extra-height">
@@ -28,12 +28,12 @@
 					<li class="nav__item nav__item--selected"><a href="index.html">Home</a></li>
 					<li class="nav__item"><a href="about_vedran.html">About me</a></li>
 					<li class="nav__item"><a href="vedrans_design_work.html">My work</a></li>
-				</ul>				
+				</ul>
 	</nav>
 	<!-- HEADER -->
 	<header class="header">
 			<div class="header__content">
-				<div class="header__image"></div>	
+				<div class="header__image"></div>
 				<div class="intro">
 					<div class="intro__content">
 						<h1 class="h2-heading">Hello, I’m Vedran.</h1>
@@ -70,7 +70,7 @@
 		</div>
 
 
-		
+
 
 
 		<!-- FOOTER -->
@@ -87,15 +87,5 @@
 				</p>
 			</div>
 		</div>
-		<!-- 
-		The following are for dev purposes only.
-		I need to fix up my Gulp scripts so I can work without these
-		-->
-		<script src="https://fb.me/react-15.0.1.js"></script>
-    	<script src="https://fb.me/react-dom-15.0.1.js"></script>
-    	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-
-
-		<script src="./js/footer/footer.js" type="text/babel"></script>
 	</body>
 </html>
