--- a/about_vedran.html
+++ b/about_vedran.html
@@ -8,6 +8,7 @@
 		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="public" content="max-age=691200" />
 	</head>
 	<body>
 		<!-- NAV -->
