--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Hello, I’m Vedran. I am a designer. I design digital products and the way people interact with them.">
 		<meta name="keywords" content="UX, UX Design, UXD, user experience design, interaction design, designer, prototyping, wireframing, workshop, user research, usability testing, portfolio, resume, cv, online portfolio, IxD, user centred design, vedran arnautovic, vedranio, thatbalduxguy, ux designer, interaction designer">
-  		<meta name="author" content="Vedran Arnautović">
+  	<meta name="author" content="Vedran Arnautović">
+		<meta http-equiv="public" content="max-age=691200" />
 		<script async>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
