renamed case study and side project pages with more meaningful names

--- a/case_study--visitor_registration_app.html
+++ b/case_study--visitor_registration_app.html
@@ -111,7 +111,7 @@
 			<div class="section section--medium section--nav">
 				<div class="sub-section__content sub-section--last-in-section">
 					<a class="link link--on-light-bg link--case-study-nav" href="vedrans_design_work.html#VisitorRegistrationApp">Back to ‘My work’</a>
-					<a class="link link--on-light-bg link--inline" href="seek_design_sprint.html">Next case study</a>
+					<a class="link link--on-light-bg link--inline" href="case_study--design_sprint.html">Next case study</a>
 				</div>
 			</div>
 		</div>
