--- a/case_study--gymsales_settings_page.html
+++ b/case_study--gymsales_settings_page.html
@@ -111,6 +111,7 @@
 			<div class="section section--medium section--nav">
 				<div class="sub-section__content sub-section--last-in-section">
 					<a class="link link--on-light-bg link--case-study-nav" href="vedrans_design_work.html#DesignOfASettingsPage">Back to ‘My work’</a>
+					<a class="link link--on-light-bg link--inline" href="vedrans_design_work.html#SideProjects">View my side projects</a>
 				</div>
 			</div>
 		</div>
