--- a/case_study--usability_testing_with_kolektiv.html
+++ b/case_study--usability_testing_with_kolektiv.html
@@ -83,7 +83,7 @@
 			<div class="section section--medium section--nav">
 				<div class="sub-section__content sub-section--last-in-section">
 					<a class="link link--on-light-bg link--case-study-nav" href="vedrans_design_work.html#CoachingAnOrgInUsabilityTesting">Back to ‘My work’</a>
-					<a class="link link--on-light-bg link--inline" href="gymsales_settings_page.html">Next case study</a>
+					<a class="link link--on-light-bg link--inline" href="case_study--gymsales_settings_page.html">Next case study</a>
 				</div>
 			</div>
 		</div>
