--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -47,7 +47,7 @@
 				<h2 class="h2-heading h2-heading__with-ipad--side-by-side">Visitor registration app</h2>
 				<p>I designed a customisable visitor registration iPad app, specifically for gyms and fitness centres.</p>
 				<p>The app has been deployed to over a thousand gyms across the US.</p>
-				<p><a class ="link link--on-light-bg" href="visitor_registration_app.html">Read case study</a></p>
+				<p><a class ="link link--on-light-bg" href="case_study--visitor_registration_app.html">Read case study</a></p>
 				</div>
 			</div>
 		</div>
@@ -60,7 +60,7 @@
 					<div class="my-work-item__description">
 					<p>During a week long design sprint, we designed, tested and validated a product idea for an increasingly important market segment for SEEK.</p>
 					<p>The output of the design sprint allowed SEEK to further validate the product, and eventually create a spin-off company, JoraLocal, to take the product to market.</p>
-					<p><a class ="link link--on-light-bg" href="seek_design_sprint.html">Read case study</a></p>
+					<p><a class ="link link--on-light-bg" href="case_study--design_sprint.html">Read case study</a></p>
 					</div>
 
 					<img class="my-work-item__image--browser-centred" src="resources/images/browser_with_joralocal_page.png" alt="Credit card payment form shown in browser"/>
@@ -76,7 +76,7 @@
 					<h2 class="h2-heading text--on-dark-bg">Workshop facilitation and wireframe design</h2>
 					<p class="text--on-dark-bg">I ran a two day design workshop for a development company in Sarajevo, and their Dutch clients, followed by creating wireframe designs for the entire product.</p>
 					<p class="text--on-dark-bg">As a result, both the clients and the development team were involved in the design process and had a clear idea on how to proceed with the implementation.</p>
-					<p><a class ="link link--on-dark-bg" href="design_workshop_facilitation_with_rubicon.html">Read case study</a></p>
+					<p><a class ="link link--on-dark-bg" href="case_study--design_workshop_facilitation.html">Read case study</a></p>
 				</div>
 			</div>
 		</div>
@@ -89,29 +89,13 @@
 					<div class="my-work-item__description">
 					<p>I redesigned the credit card payment form used during job ad posting on SEEK’s website. </p>
 					<p>The redesign caused a 150% increase in customers paying upfront (rather than by invoice), resulting in a six figure increase in upfront cash flow.</p>
-					<p><a class ="link link--on-light-bg" href="seek_credit_card_form_redesign.html">Read case study</a></p>
+					<p><a class ="link link--on-light-bg" href="case_study--credit_card_form_redesign.html">Read case study</a></p>
 					</div>
 
 					<img class="my-work-item__image--browser-centred" src="resources/images/browser_with_card_form.png" alt="Credit card payment form shown in browser"/>
 
 			</div>
 		</div>
-
-		<!-- SEEK REGISTRATION -->
-<!-- 		<div class="section section--light ">
-			<div class="my-work-item my-work-item--with-desktop-browser">
-					<h2 class="h2-heading">Design of a responsive registration form</h2>
-
-					<div class="my-work-item__description">
-					<p>I designed the registration form for employers using the Seek platform.</p>
-					<p>The new design allowed registration on mobile devices for the first time, simplifed and sped up the process and resulted in X% in form completion rate</p>
-					<p><a class ="link link--on-light-bg" href="seek_registration_form.html">Read case study</a></p>
-					</div>
-
-					<img class="my-work-item__image--browser-centred" src="resources/images/Browser.png" alt="Registration form within a browser window"/>
-
-			</div>
-		</div> -->
 
 		<!-- KOLEKTIV.BA USABILITY TESTING -->
 		<div class="section">
@@ -121,7 +105,7 @@
 					<h2 class="h2-heading text--on-dark-bg">Coaching an organisation in usability testing</h2>
 					<p class="text--on-dark-bg">I worked with an organisation in Bosnia to introduce them to usability testing and coach them on how to incorporate usability testing into their product development process.</p>
 					<p class="text--on-dark-bg">The <a class ="link link--on-dark-bg link--inline" href="http://kolektiv.ba/">Kolektiv</a> team saw the power of insights gained through usability testing for the first time and have since incorporated it into their product development process.</p>
-					<p><a class ="link link--on-dark-bg" href="usability_testing_with_kolektiv.html">Read case study</a></p>
+					<p><a class ="link link--on-dark-bg" href="case_study--usability_testing_with_kolektiv.html">Read case study</a></p>
 				</div>
 			</div>
 		</div>
@@ -134,7 +118,7 @@
 					<div class="my-work-item__description">
 					<p>GymSales’ settings page had become unwieldy and difficult to navigate. It was hard to add new content in a logical way.</p>
 					<p>My redesign allowed easier comprehension of the complex settings options and allowed for future growth of the page.</p>
-					<p><a class ="link link--on-light-bg" href="gymsales_settings_page.html">Read case study</a></p>
+					<p><a class ="link link--on-light-bg" href="case_study--gymsales_settings_page.html">Read case study</a></p>
 					</div>
 
 					<img class="my-work-item__image--browser-centred" src="resources/images/browser_with_settings_page.png" alt="Settings page shown within a browser window"/>
@@ -145,7 +129,7 @@
 		<!-- SIDE PROJECTS -->
 		<div class="section section--medium section--on-top">
 			<div class="my-work-item my-work-item--side-projects">
-					<h2 class="h2-heading">Side projects</h2>
+					<h2 id="SideProjects" class="h2-heading">Side projects</h2>
 
 					<div class="my-work-item__description">
 					<p>Here are some side projects that I worked on in my spare time. I do these things out of a love for design and a desire for constant learning. And because it beats watching TV.</p>
@@ -154,7 +138,7 @@
 
 					<div class="my-work-item--side-projects-container">
 						<div class="my-work-item__side-project">
-							<a target="_blank" href="https://itunes.apple.com/au/app/walnut/id560843785?mt=8">
+							<a href="side_project--walnut.html">
 								<img class="my-work-item__image--side-project-link" src="resources/images/side_project_logo_walnut.png" alt="Walnut Art App logo"/>
 								<span class="side-project-name"><span>Walnut Art iOS App</span></span>
 							</a>
