Eliminating orphaned words in headings

--- a/side_project--walnut.html
+++ b/side_project--walnut.html
@@ -23,7 +23,7 @@
 		<!-- CASE STUDY INTRO -->
 		<div class="section section--medium">
 			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
-				<h1 class="h1-heading">Walnut art visualisation iOS app</h1>
+				<h1 class="h1-heading">Walnut &mdash; art visualisation <span class="nobr">iOS app</span></h1>
 					<p>Intro about Walnut</p>
 			</div>
 		</div>
@@ -50,11 +50,6 @@
 					<h2 class="h2-heading">Current status</h2>
 
 					<p>Describe the current status of the app</p>
-
-					<a target="_blank" href="https://itunes.apple.com/au/app/walnut/id560843785?mt=8">
-						<img class="my-work-item__image--side-project-link" src="resources/images/side_project_logo_walnut.png" alt="Walnut Art App logo"/>
-						<span class="side-project-name"><span>Walnut Art iOS App</span></span>
-					</a>
 
 			</div>
 			<div class="section section--medium section--nav">
