--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -55,7 +55,7 @@
 		<!-- DESIGN SPRINT -->
 		<div id="DesignSprintForJoraLocal" class="section section--light">
 			<div class="my-work-item my-work-item--with-desktop-browser">
-					<h2 class="h2-heading">Design sprint for JoraLocal</h2>
+					<h2 class="h2-heading">Design sprint <span class="nobr">for JoraLocal</span></h2>
 
 					<div class="my-work-item__description">
 					<p>During a week long design sprint, we designed, tested and validated a product idea for an increasingly important market segment for SEEK.</p>
@@ -73,7 +73,7 @@
 
 			<div id="WorkshopFacilitationAndWireframeDesign" class="my-work-item my-work-item_full-width-image--rubicon">
 				<div class="my-work-item__description--full-width-image">
-					<h2 class="h2-heading text--on-dark-bg">Workshop facilitation and wireframe design</h2>
+					<h2 class="h2-heading text--on-dark-bg">Workshop facilitation and <span class="nobr">wireframe design</span></h2>
 					<p class="text--on-dark-bg">I ran a two day design workshop for a development company in Sarajevo, and their Dutch clients, followed by creating wireframe designs for the entire product.</p>
 					<p class="text--on-dark-bg">As a result, both the clients and the development team were involved in the design process and had a clear idea on how to proceed with the implementation.</p>
 					<p><a class ="link link--on-dark-bg" href="case_study--design_workshop_facilitation.html">Read case study</a></p>
@@ -84,7 +84,7 @@
 		<!-- CREDIT CARD PAYMENT -->
 		<div id="CreditCardPaymentForm" class="section section--light">
 			<div class="my-work-item my-work-item--with-desktop-browser">
-					<h2 class="h2-heading">Credit card payment form</h2>
+					<h2 class="h2-heading">Credit card <span class="nobr">payment form</span></h2>
 
 					<div class="my-work-item__description">
 					<p>I redesigned the credit card payment form used during job ad posting on SEEK’s website. </p>
@@ -102,7 +102,7 @@
 
 			<div id="CoachingAnOrgInUsabilityTesting" class="my-work-item my-work-item_full-width-image--kolektiv">
 				<div class="my-work-item__description--full-width-image">
-					<h2 class="h2-heading text--on-dark-bg">Coaching an organisation in usability testing</h2>
+					<h2 class="h2-heading text--on-dark-bg">Coaching an organisation in <span class="nobr">usability testing</span></h2>
 					<p class="text--on-dark-bg">I worked with an organisation in Bosnia to introduce them to usability testing and coach them on how to incorporate usability testing into their product development process.</p>
 					<p class="text--on-dark-bg">The <a class ="link link--on-dark-bg link--inline" href="http://kolektiv.ba/">Kolektiv</a> team saw the power of insights gained through usability testing for the first time and have since incorporated it into their product development process.</p>
 					<p><a class ="link link--on-dark-bg" href="case_study--usability_testing_with_kolektiv.html">Read case study</a></p>
@@ -113,7 +113,7 @@
 		<!-- GYM SALES SETTINGS -->
 		<div id="DesignOfASettingsPage" class="section section--light section--on-top">
 			<div class="my-work-item my-work-item--with-desktop-browser">
-					<h2 class="h2-heading">Design of a settings page</h2>
+					<h2 class="h2-heading">Design of a <span class="nobr">settings page</span></h2>
 
 					<div class="my-work-item__description">
 					<p>GymSales’ settings page had become unwieldy and difficult to navigate. It was hard to add new content in a logical way.</p>
@@ -128,8 +128,8 @@
 
 		<!-- SIDE PROJECTS -->
 		<div class="section section--medium section--on-top">
-			<div class="my-work-item my-work-item--side-projects">
-					<h2 id="SideProjects" class="h2-heading">Side projects</h2>
+			<div id="SideProjects" class="my-work-item my-work-item--side-projects">
+					<h2 class="h2-heading">Side projects</h2>
 
 					<div class="my-work-item__description">
 					<p>Here are some side projects that I worked on in my spare time. I do these things out of a love for design and a desire for constant learning. And because it beats watching TV.</p>
@@ -158,7 +158,7 @@
 						<div class="my-work-item__side-project">
 							<a target="_blank" href="https://www.minty.ninja/">
 								<img class="my-work-item__image--side-project-link" src="resources/images/side_project_logo_minty_ninja.png" alt="Minty Ninja logo"/>
-								<span class="side-project-name"><span>minty.ninja</span></span>
+								<span class="side-project-name"><span>Minty Ninja<br>(archived)</span></span>
 							</a>
 						</div>
 					</div>
