Walnut app side project description

--- a/side_project--walnut.html
+++ b/side_project--walnut.html
@@ -20,11 +20,12 @@
 					</ul>
 		</nav>
 
-		<!-- CASE STUDY INTRO -->
+
 		<div class="section section--medium">
 			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
-				<h1 class="h1-heading">Walnut &mdash; art visualisation <span class="nobr">iOS app</span></h1>
-					<p>Intro about Walnut</p>
+				<h1 class="h1-heading">Walnut <span class="nobr">iOS app</span></h1>
+					<p>Walnut allows you to visualise an artwork on your wall, before you buy it.</p>
+					<p><a class="link link--on-light-bg" target="_blank" href="https://itunes.apple.com/au/app/walnut/id560843785?mt=8">View on the app store</a></p>
 			</div>
 		</div>
 
@@ -32,30 +33,34 @@
 			<div class="sub-section__content sub-section--first-in-section">
 					<h2 class="h2-heading">About the project</h2>
 
-					<p>A little bit about the Walnut project</p>
+					<p>I designed, built and marketed Walnut with two friends. We registered it as a business and actually made some decent money from it.</p>
+					<p>That was in 2011. To this date it has the most accurate perspective artwork visulisation of any similar apps.</p>
+					<br>
+
+					<img class="image--medium" src="resources/images/walnut_example.jpg">
 			</div>
 			<div class="sub-section__content">
 					<h2 class="h2-heading">My motivation</h2>
 
-					<p>A little bit about what I wanted to get out of building Walnut</p>
+					<p>I partially built Walnut for the wrong reasons. I wanted to learn iOS dev and wanted to build an app. In reality, I didn't really care whether I was solving a problem worth solving, I just wanted to build an app (because that was a cool thing to do at the time).</p>
 
 			</div>
 			<div class="sub-section__content">
 					<h2 class="h2-heading">What I learnt</h2>
 
-					<p>Write about what I learnt through the experience of building an app and a business around it</p>
+					<p>I could write a lot on the things I learnt about launching a start-up, developing a business and managing clients, but I won't do that here. If we end up talking, I'm happy to go through it.</p>
+					<p>The most valuable lesson was that you should never enter into a venture with other people if you don't have the same goals in mind.</p>
+					<p>While I am proud of some of the early product validation work we did, including guerilla testing at art shows, we could have done a lot more to test whether people were willing to <strong>actually pay</strong> for the service.</p>
 			</div>
 
 			<div class="sub-section__content sub-section--last-in-section">
 					<h2 class="h2-heading">Current status</h2>
 
-					<p>Describe the current status of the app</p>
-
+					<p>We've disolved the business and retired the website, but the app is still live and you can <a class="link link--on-light-bg link--inline" target="_blank" href="https://itunes.apple.com/au/app/walnut/id560843785?mt=8">download it from the app store</a>.</p>
 			</div>
 			<div class="section section--medium section--nav">
 				<div class="sub-section__content sub-section--last-in-section">
-					<a class="link link--on-light-bg link--case-study-nav" href="vedrans_design_work.html#CoachingAnOrgInUsabilityTesting">Back to ‘My work’</a>
-					<a class="link link--on-light-bg link--inline" href="case_study--gymsales_settings_page.html">Next case study</a>
+					<a class="link link--on-light-bg link--case-study-nav" href="vedrans_design_work.html#SideProjects">Back to ‘My work’</a>
 				</div>
 			</div>
 		</div>
