--- a/case_study--design_sprint.html
+++ b/case_study--design_sprint.html
@@ -12,13 +12,16 @@
 	</head>
 	<body>
 		<!-- NAV -->
-		<nav class="nav nav--on-light-bg">
+		<nav class="nav nav--on-light-bg" id="nav">
 					<ul class="nav__list">
 						<li class="nav__item"><a href="index.html">Home</a></li>
 						<li class="nav__item"><a href="about_vedran.html">About me</a></li>
 						<li class="nav__item nav__item--selected"><a href="vedrans_design_work.html">My work</a></li>
 					</ul>
 		</nav>
+		<!-- Make nav sticky on scroll -->
+		<script type="text/javascript" src="/js/sticky_nav.js"></script>
+		<script type="text/javascript">formatStickyNav("@colour-light-gray");</script>
 
 		<!-- CASE STUDY INTRO -->
 		<div class="section section--medium">
