--- a/index.html
+++ b/index.html
@@ -93,5 +93,8 @@
 				</p>
 			</div>
 		</div>
+		<div class="tota11y">
+			<script src="/js/tota11y.min.js"></script>
+		</div>
 	</body>
 </html>
