Updated client details for the Rubicon project

--- a/case_study--design_workshop_facilitation.html
+++ b/case_study--design_workshop_facilitation.html
@@ -35,7 +35,7 @@
 			<div class="sub-section__content sub-section--first-in-section">
 					<h2 class="h2-heading">The challenge</h2>
 
-					<p>Rubicon were embarking on a project with a Dutch client and wanted to try a different approach. To this point, they worked purely from client briefs, with little say in the design. They wanted to get the whole team, including the developers and the client, involved in the design process.</p>
+					<p>Rubicon were embarking on a project with a Dutch client,<a class="link link--on-light-bg link--inline" target="_blank" href="https://en.assessment-training.com/"> Assessment Training</a>, and wanted to try a different approach. To this point, they worked purely from client briefs, with little say in the design. They wanted to get the whole team, including the developers and the client, involved in the design process.</p>
 			</div>
 			<div class="sub-section__content">
 					<h2 class="h2-heading">A lucky coincidence</h2>
@@ -101,7 +101,9 @@
 
 					<p>At the end of the workshop, Rubicon and their clients had a common understanding of the product they were building as well as the audience they were building it for.</p>
 					<p>The wireframes and the prototype I delivered allowed Rubicon to start development straigth after the workshop.</p>
-					<p>The product is currently being developed and is being pitched for the next phase of VC funding.</p>
+					<p>The product has since been launched.</p>
+					<br>
+					<a class="link link--on-light-bg" target="_blank" href="https://en.assessment-training.com/">Visit Assessment Training</a>
 			</div>
 			<div class="section section--medium section--nav">
 				<div class="sub-section__content sub-section--last-in-section">
