draft version of the page explaining minty ninja

--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -159,7 +159,7 @@
 							</a>
 						</div>
 						<div class="my-work-item__side-project">
-							<a target="_blank" href="/side_projects/minty.ninja/index.html">
+							<a href="side_project--minty_ninja.html">
 								<img class="my-work-item__image--side-project-link" src="resources/images/side_project_logo_minty_ninja.png" alt="Minty Ninja logo"/>
 								<span class="side-project-name"><span>Minty Ninja<br>(archived)</span></span>
 							</a>
