minty ninja side project page

--- a/side_project--minty_ninja.html
+++ b/side_project--minty_ninja.html
@@ -26,9 +26,11 @@
 
 		<div class="section section--medium">
 			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
-				<h1 class="h1-heading">Minty Ninja <span class="nobr">website and service</span></h1>
+				<h1 class="h1-heading">Minty Ninja website and service</h1>
 					<p>If this product had a personality, it would be a complete douchebag.</p>
-					<p><a class="link link--on-light-bg" target="_blank" href="/side_projects/minty.ninja/index.html">View minty.ninja (archived)</a></p>
+					<p>This is the only product I regret getting involved with, but I did, so here we are. The site is no longer live, but you can see an archived version of it below.</p>
+
+					<p><a class="link link--on-light-bg" href="/side_projects/minty.ninja/index.html">View minty.ninja (archived)</a></p>
 			</div>
 		</div>
 
@@ -36,24 +38,29 @@
 			<div class="sub-section__content sub-section--first-in-section">
 					<h2 class="h2-heading">About the project</h2>
 
-					<p>blah</p>
+					<p>Minty Ninja allowed you to send personalised message and chewing gum to someone you know.</p>
+					<p>Sounds harmless, right?</p>
+					<p>Except, that it allowed you to do so annonimously and the message told your friend how smelly their breath is.</p>
 			</div>
 			<div class="sub-section__content">
 					<h2 class="h2-heading">My motivation</h2>
 
-					<p>blah</p>
+					<p>To be honest, when a friend pitched the idea to me and asked me if I'd be interested in designing it, I didn't think hard enough about the effect the product could have on recipients of the message.</p>
+					<p>The idea sounded fun and I looked forward to writting some cheeky copy. That is one part of the project I'm proud of and had fun doing.</p>
 
 			</div>
 			<div class="sub-section__content">
 					<h2 class="h2-heading">What I learnt</h2>
 
-					<p>blah</p>
+					<p>I think I have a pretty good moral compass. I've always worked on products I could support from an ethical point of view. This was the first and only time I compromised my design ethics.</p>
+					<p>The experience has thought me, first hand, the importance of stopping to think about products before getting involved with them.</p>
 			</div>
 
 			<div class="sub-section__content sub-section--last-in-section">
 					<h2 class="h2-heading">Current status</h2>
 
-					<p>blah</p>
+					<p>I decided to pull out of the team in 2016 having explained my rationale to them. Thankfully, they all understood and together we decided to pull the product down.</p>
+					<p><a class="link link--on-light-bg" href="/side_projects/minty.ninja/index.html">View an archived version of minty.ninja</a></p>
 			</div>
 			<div class="section section--medium section--nav">
 				<div class="sub-section__content sub-section--last-in-section">
