--- a/case_study--visitor_registration_app.html
+++ b/case_study--visitor_registration_app.html
@@ -108,7 +108,7 @@
 			<div class="sub-section__content sub-section--last-in-section">
 					<h2 class="h2-heading">The outcome</h2>
 
-					<p>The app was finished in May 2016 and has been rolled out to over a thousand gyms around the USA.</p>
+					<p>The app was finished in May 2016 and has been rolled out to over a thousand gyms around the USA, Canada and the UK.</p>
 					<p>A further sign of success was that the major client, Snap Fitness, requested for the app to be extended to cover their entire member signup process.</p>
 			</div>
 			<div class="section section--medium section--nav">
