--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -142,25 +142,25 @@
 					<div class="my-work-item--side-projects-container">
 						<div class="my-work-item__side-project">
 							<a href="side_project--walnut.html">
-								<img class="my-work-item__image--side-project-link" src="resources/images/side_project_logo_walnut.png" alt="Walnut Art App logo"/>
+								<img class="my-work-item__image--side-project-link" src="resources/images/side_project_logo_walnut.png" alt="Walnut Art App logo – view side project details"/>
 								<span class="side-project-name"><span>Walnut Art iOS App</span></span>
 							</a>
 						</div>
 						<div class="my-work-item__side-project">
 							<a target="_blank" href="http://react-autosuggest.js.org/">
-								<img class="my-work-item__image--side-project-link" src="resources/images/side_project_logo_react_auto-suggest.png" alt="React Autosuggest logo"/>
+								<img class="my-work-item__image--side-project-link" src="resources/images/side_project_logo_react_auto-suggest.png" alt="React Autosuggest logo – go to side project site"/>
 								<span class="side-project-name"><span>react-autosuggest.js.org</span></span>
 							</a>
 						</div>
 						<div class="my-work-item__side-project">
 							<a target="_blank" href="http://accessible-colors.com/">
-								<img class="my-work-item__image--side-project-link" src="resources/images/side_project_logo_accessible_colors.png" alt="Accessible Colours logo"/>
+								<img class="my-work-item__image--side-project-link" src="resources/images/side_project_logo_accessible_colors.png" alt="Accessible Colours logo – go to project site"/>
 								<span class="side-project-name"><span>accessible-colors.com</span></span>
 							</a>
 						</div>
 						<div class="my-work-item__side-project">
 							<a href="side_project--minty_ninja.html">
-								<img class="my-work-item__image--side-project-link" src="resources/images/side_project_logo_minty_ninja.png" alt="Minty Ninja logo"/>
+								<img class="my-work-item__image--side-project-link" src="resources/images/side_project_logo_minty_ninja.png" alt="Minty Ninja logo – view side project details"/>
 								<span class="side-project-name"><span>Minty Ninja<br>(archived)</span></span>
 							</a>
 						</div>
