added lang tag to all my html files

--- a/case_study--design_workshop_facilitation.html
+++ b/case_study--design_workshop_facilitation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
 		<title>Workshop facilitation and wireframe design</title>
 		<link rel="stylesheet" src="http://normalize-css.googlecode.com/svn/trunk/normalize.css" />
