--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
 		<title>Vedran’s design work, case studies and side projects</title>
 		<link rel="stylesheet" src="http://normalize-css.googlecode.com/svn/trunk/normalize.css" />
