implemented Person structured data for home and about pages

--- a/about_vedran.html
+++ b/about_vedran.html
@@ -83,5 +83,34 @@
 				</p>
 			</div>
 		</div>
+		<script type="application/ld+json">
+			{
+				"@context": [
+						"http://schema.org/"
+				],
+				"@id": "http://vedran.io",
+				"@type": "Person",
+				"name": "Vedran Arnautovic",
+				"address": "Melbourne, Australia",
+				"homeLocation": "Melbourne, Australia",
+				"jobTitle": "Senior User Experience Designer",
+				"workLocation": "Melbourne, Australia",
+				"worksFor": "SEEK.com.au",
+				"description": "Designer with over 10 years’ experience, focusing on user experience design, usability and interface design.",
+				"Nationality": "Australa",
+				"birthPlace": "Sarajevo",
+				"colleague": "https://au.linkedin.com/in/cameronrogers",
+				"alumniOf": "Melbourne University",
+				"url": "http://vedran.io",
+				"image": "http://vedran.io/resources/images/vedran_profile_pic.JPG",
+				"sameAs": [
+						"http://www.twitter.com/vedranio",
+						"http://www.instagram.com/vedran_arnautovic/",
+						"http://github.com/vedranio",
+						"http://www.linkedin.com/in/vedran-arnautovic-716a1b128",
+						"http://medium.com/@vedranio"
+				]
+			}
+		</script>
 	</body>
 </html>
