--- a/about_vedran.html
+++ b/about_vedran.html
@@ -97,7 +97,7 @@
 				"workLocation": "Melbourne, Australia",
 				"worksFor": "SEEK.com.au",
 				"description": "Designer with over 10 years’ experience, focusing on user experience design, usability and interface design.",
-				"Nationality": "Australa",
+				"Nationality": "Australia",
 				"birthPlace": "Sarajevo",
 				"colleague": "https://au.linkedin.com/in/cameronrogers",
 				"alumniOf": "Melbourne University",
