finalising schema.org implementation

--- a/index.html
+++ b/index.html
@@ -102,6 +102,25 @@
 		        "http://schema.org/"
 		    ],
 		    "@id": "http://vedran.io",
+		    "@type": "WebSite",
+		    "about": "Personal profile and UX Desgin portfolio for Vedran Arnautovic",
+				"accessMode": "textual, visual",
+				"accessModeSufficient": "textual, visual",
+				"accountablePerson": "Vedran Arnautovic",
+				"alternativeHeadline": "Vedran Arnautovic – user experience designer",
+				"author": "Vedran Arnautovic",
+				"copyrightHolder": "Vedran Arnautovic",
+				"keywords": "design, ux design, user experience design, interaction design, accessibilty, usability design, user research, interface design, vedranio, vedran, arnautovic, vedran arnautovic, portfolio",
+				"thumbnailUrl": "resources/images/headshot.png",
+				"url": "http://vedran.io",
+		    "image": "http://vedran.io/resources/images/vedran_profile_pic.JPG"
+			}
+		</script>
+		<script type="application/ld+json">
+	    {
+		    "@context": [
+		        "http://schema.org/"
+		    ],
 		    "@type": "Person",
 		    "name": "Vedran Arnautovic",
 				"address": "Melbourne, Australia",
@@ -110,7 +129,7 @@
 				"workLocation": "Melbourne, Australia",
 				"worksFor": "SEEK.com.au",
 				"description": "Designer with over 10 years’ experience, focusing on user experience design, usability and interface design.",
-				"Nationality": "Australa",
+				"Nationality": "Australia",
 				"birthPlace": "Sarajevo",
 				"colleague": "https://au.linkedin.com/in/cameronrogers",
 				"alumniOf": "Melbourne University",
@@ -125,6 +144,5 @@
 		    ]
 			}
 		</script>
-
 	</body>
 </html>
