--- a/404.html
+++ b/404.html
@@ -18,14 +18,12 @@
 			</div>
 		</div>
 
-		<div class="section section--light ">
-			<div class="sub-section__content sub-section--first-in-section">
-					<h2 class="h2-heading">Some places you might want to <span class="nobr">go instead</span></h2>
+		<div class="section section--light section--last-in-section">
+			<div class="sub-section__content sub-section--last-in-section">
+					<h2 class="h2-heading">Places you might want to go instead...</h2>
 
 					<p><a class="link link--on-light-bg" href="javascript:history.back()">Last page you visited</a></p>
 					<p><a class="link link--on-light-bg" href="http://www.vedran.io">vedran.io homepage</a></p>
-					<p><a class="link link--on-light-bg" href="http://www.vedran.io/vedrans_design_work.html">My work</a></p>
-					<p><a class="link link--on-light-bg" href="http://www.vedran.io/about_vedran.html">About me</a></p>
 					<p><a class="link link--on-light-bg" target="_blank" href="http://www.creativebloq.com/web-design/best-404-pages-812505">See some well designed 404 pages</a></p>
 			</div>
 		</div>
