tweaked the 404 page and included a CSS animation

--- a/404.html
+++ b/404.html
@@ -12,16 +12,19 @@
 	</head>
 	<body>
 		<div class="section section--medium">
-			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
-				<h1 class="h1-heading">You look lost</h1>
-					<p>The last thing you need is a cute page to piss you off even more.</p>
+			<div class="section__content section__content--allow-wide">
+				<h1 class="h1-heading--hero text-flicker-in-glow">404</h1>
+			</div>
+		</div>
+		<div class="section section--light">
+			<div class="section__content section__content--allow-wide">
+				<h2 class="h2-heading">You look lost</h2>
+					<p>Here are some places you might want to <span class="nobr">go instead...<span></p>
 			</div>
 		</div>
 
 		<div class="section section--light section--last-in-section">
 			<div class="sub-section__content sub-section--last-in-section">
-					<h2 class="h2-heading">Places you might want to go instead...</h2>
-
 					<p><a class="link link--on-light-bg" href="javascript:history.back()">Last page you visited</a></p>
 					<p><a class="link link--on-light-bg" href="http://www.vedran.io">vedran.io homepage</a></p>
 					<p><a class="link link--on-light-bg" target="_blank" href="http://www.creativebloq.com/web-design/best-404-pages-812505">See some well designed 404 pages</a></p>
