--- a/case_study--credit_card_form_redesign.html
+++ b/case_study--credit_card_form_redesign.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Credit card payment form re-design</title>
+		<title>Credit card payment form re-design | by Vedran Arnautovic</title>
 		<link rel="stylesheet" src="http://normalize-css.googlecode.com/svn/trunk/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/app.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto' rel='stylesheet' type='text/css'>
