--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
 <!DOCTYPE HTML>
 <html lang="en">
 		<head>
-		<title>Vedran Arnautovic – User Experience and Interaction Designer in Melbourne</title>
+		<title>Vedran Arnautovic | User Experience and Interaction Designer in Melbourne</title>
 		<link rel="stylesheet" src="http://normalize-css.googlecode.com/svn/trunk/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/app.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto' rel='stylesheet' type='text/css'>
 		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Hello, I’m Vedran. I am a designer. I design digital products and the way people interact with them.">
-		<meta name="keywords" content="UX, UX Design, UXD, user experience design, interaction design, designer, prototyping, wireframing, workshop, user research, usability testing, portfolio, resume, cv, online portfolio, IxD, user centred design, vedran arnautovic, vedranio, thatbalduxguy, ux designer, interaction designer">
-  	<meta name="author" content="Vedran Arnautović">
+
 		<meta http-equiv="public" content="max-age=691200" />
+
+		<!-- Metadata for Google -->
+		<meta name="description" content="Vedran Arnautovic is a user experience and interaction designer based in Melbourne.">
+		<meta name="keywords" content="UX, UX Design, UXD, user experience design, interaction design, designer, prototyping, wireframing, workshop, user research, usability testing, portfolio, resume, cv, online portfolio, IxD, user centred design, vedran arnautovic, vedranio, thatbalduxguy, ux designer, interaction designer">
+  	<meta name="author" content="Vedran Arnautovic">
+		<meta name="copyright" content="Vedran Arnautovic" />
+
+		<!-- Metadata for Facebook OpenGraph -->
+		<meta property="og:title" content="Vedran Arnautovic | User Experience and Interaction Designer in Melbourne" />
+		<meta property="og:type" content="portfolio website" />
+		<meta property="og:image" content="http://www.vedran.io/resources/images/vedran_speaking_at_meetup.jpg" />
+		<meta property="og:url" content="http://www.vedran.io/" />
+		<meta property="og:description" content="Vedran Arnautovic is a user experience and interaction designer based in Melbourne." />
+
+		<!-- Metadata for Twitter Cards -->
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:title" content="Vedran Arnautovic | User Experience and Interaction Designer in Melbourne" />
+		<meta name="twitter:description" content="Vedran Arnautovic is a user experience and interaction designer based in Melbourne." />
+		<meta name="twitter:image" content="http://www.vedran.io/resources/images/vedran_speaking_at_meetup.jpg" />
+
 		<script async>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
