fixed Facebook metadata

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<meta property="og:type" content="portfolio website" />
 		<meta property="og:image" content="http://www.vedran.io/resources/images/vedran_speaking_at_meetup.jpg" />
 		<meta property="og:url" content="http://www.vedran.io/" />
-		<meta property="og:description" content="Vedran Arnautovic is a user experience and interaction designer based in Melbourne." />
+		<meta property="og:description" content="This is a personal portfolio site for Vedran Arnautovic, a user experience and interaction designer based in Melbourne." />
 
 		<!-- Metadata for Twitter Cards -->
 		<meta name="twitter:card" content="summary" />
