--- a/case_study--gymsales_settings_page.html
+++ b/case_study--gymsales_settings_page.html
@@ -118,25 +118,20 @@
 				</div>
 			</div>
 		</div>
-
-
-
-
 		<!-- START FOOTER -->
 		<script src="js/clipboard.min.js"></script>
 		<script src="js/copy_email.js"></script>
 		<div id='footer'></div>
 		<div class="footer section--dark footer__content">
 			<div class="section__content ">
+					<a id="email" onmouseover="mouseOver('email')" onmouseout="mouseOut('email','hello@vedran.io')" class ="link link--on-dark-bg link__footer email-bttn copy-email" data-clipboard-text="hello@vedran.io" href="#footer">hello@vedran.io</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/vedranio">Twitter</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@vedranio">Medium</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.linkedin.com/in/vedran-arnautovic-716a1b128">LinkedIn</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://github.com/vedranio">GitHub</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.instagram.com/vedran_arnautovic/">Instagram</a>
-					<a id="email" class ="link link--on-dark-bg link__footer copy-email" data-clipboard-text="hello@vedran.io" href="#footer">hello@vedran.io</a>
-					<script type="text/javascript">copyEmailToClipBoard('.copy-email','email', "link link--on-dark-bg link__footer copy-email","hello@vedran.io");</script>
+					<script type="text/javascript">copyEmailToClipBoard('.copy-email','email', "link link--on-dark-bg link__footer email-bttn copy-email","hello@vedran.io");</script>
 			</div>
 		</div>
-		<!-- END FOOTER -->
-	</body>
+		<!-- END FOOTER -->	</body>
 </html>
