--- a/case_study--credit_card_form_redesign.html
+++ b/case_study--credit_card_form_redesign.html
@@ -194,13 +194,13 @@
 		<div id='footer'></div>
 		<div class="footer section--dark footer__content">
 			<div class="section__content ">
-					<a id="email" onmouseover="mouseOver('email')" onmouseout="mouseOut('email','hello@vedran.io')" class ="link link--on-dark-bg link__footer email-bttn copy-email" data-clipboard-text="hello@vedran.io" href="#footer">hello@vedran.io</a>
+					<a id="copy-email" onmouseover="mouseOver('copy-email')" onmouseout="mouseOut('copy-email','hello@vedran.io')" class ="link link--on-dark-bg link__footer email-bttn copy-email" data-clipboard-text="hello@vedran.io" href="#copy-email">hello@vedran.io</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/vedranio">Twitter</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@vedranio">Medium</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.linkedin.com/in/vedran-arnautovic-716a1b128">LinkedIn</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://github.com/vedranio">GitHub</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.instagram.com/vedran_arnautovic/">Instagram</a>
-					<script type="text/javascript">copyEmailToClipBoard('.copy-email','email', "link link--on-dark-bg link__footer email-bttn copy-email","hello@vedran.io");</script>
+					<script type="text/javascript">copyEmailToClipBoard('.copy-email','copy-email', "link link--on-dark-bg link__footer email-bttn copy-email","hello@vedran.io");</script>
 			</div>
 		</div>
 		<!-- END FOOTER -->
