absolute reference to CSS file for the 404 page

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>404 – page not found</title>
 		<link rel="stylesheet" src="http://normalize-css.googlecode.com/svn/trunk/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="css/app.css">
+		<link rel="stylesheet" type="text/css" href="http://www.vedran.io/css/app.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto' rel='stylesheet' type='text/css'>
 		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
 
